tonnage for ticket